test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_sizeof_no_exp.plx
pub fn main(none) i32 {
    return sizeof
    (10)
}
